txt-output/91.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: there are several ways to fix the program. No oracle given.                
v56 = (\f -> f 1) (\y -> if y then 1 else 0)                           

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\91.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\91.hs:6:15:
    No instance for (Num Bool)
      arising from the literal `1' at ill-typed\91.hs:6:15
    Possible fix: add an instance declaration for (Num Bool)
    In the first argument of `f', namely `1'
    In the expression: f 1
    In the expression: (\ f -> f 1) (\ y -> if y then 1 else 0)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\91.hs, ill-typed\91.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\91.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\91.hs:6:16: error:
    * No instance for (Num Bool) arising from the literal `1'
    * In the first argument of `f', namely `1'
      In the expression: f 1
      In the expression: \ f -> f 1
  |
6 | v56 = (\f -> f 1) (\y -> if y then 1 else 0)                           
  |                ^
